# Semaforo_RTOS

./: CMakeLists.txt  README.md  semaforo.c
